<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiftManager"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/button_maker"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/a"
            android:layout_marginBottom="20dp"
            android:text="@string/create_new_lift" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/button_maker">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lift_container"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">



            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/lmmm"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/liftMaker">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="30sp"
                android:text="@string/new_lift" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/date"
                android:autofillHints="@string/when_did_you_lift_mm_dd_yy"
                android:inputType="date"
                android:layout_gravity="center"
                android:hint="@string/when_did_you_lift_mm_dd_yy" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/amount"
                android:autofillHints="@string/how_much_did_you_lift"
                android:inputType="number"
                android:layout_gravity="center"
                android:hint="@string/how_much_did_you_lift" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/how_many_reps_and_sets_did_you_do_format_as_reps_x_sets"
                android:id="@+id/repsnsets"
                android:layout_gravity="center"
                android:hint="@string/how_many_reps_and_sets_did_you_do_format_as_reps_x_sets" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/lift"
                android:autofillHints="@string/what_lift_did_you_do"
                android:inputType="textNoSuggestions"
                android:layout_gravity="center"
                android:hint="@string/what_lift_did_you_do" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sub"
                android:layout_gravity="center"
                android:text="@string/submit"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>